--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -6,13 +6,27 @@
 
     display: flex;
     flex-direction: column;
+   
 }
 
 .container section {
     flex: 1;
-
+    
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 6.25rem;
     align-content: center;
 }
+
+@media(max-width: 720px) {
+    .container section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+        margin-top: 5rem;
+    }
+}
+
