--- a/src/styles/components/ChallengeBox.module.css
+++ b/src/styles/components/ChallengeBox.module.css
@@ -12,12 +12,15 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+
+    
 }
 
 .challengeNotActive {
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 .challengeNotActive strong {
@@ -107,4 +110,10 @@
 
 .challengeActive footer button:hover {
     filter: brightness(0.9);
+}
+
+@media (max-width: 720px) {
+    .challengeBoxContainer{
+       
+    }
 }
